todo Main class done

--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -164,9 +164,9 @@ ceux-ci au sens Pareto.
 		      \item \texttt{genFootpaths()} génère les chemins à pied en ne gardant que ceux dont la longueur est inférieur ou égale à celle précisée, à l'aide de la classe \texttt{BallTree}.
 	      \end{itemize}
 
-	\item \textbf{AbstractSolver}~: Regroupe les fonctions communes à Solver et AbstractSolver.
+	\item \textbf{AbstractSolver}~: regroupe les fonctions communes à Solver et AbstractSolver.
 
-	\item \textbf{Main}~: % TODO
+	\item \textbf{Main}~: point d'entrée du programme. C'est cette classe qui construit les objets \texttt{data}, \texttt{Solver}, \texttt{MultiCritSolver}, et qui gère l'input de l'utilisateur pour connaître l'arrêt de départ et d'arrivée, ainsi que de l'heure de départ, pour passer ces informations à \texttt{Solver} ou \texttt{MultiCritSolver}.
 
 \end{itemize}
 
