remove one todo

--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -212,8 +212,8 @@ Le processus de chargement s'effectue en trois grandes étapes :
 
 
 	\item Instanciation du \texttt{Solver} et/ou du \texttt{MultiCritSolver} à l’aide de l’objet \texttt{Data} (passé aux constructeurs).
-	      Le constructeur \texttt{Solver} et de \texttt{MultiCritSolver} appellent leur méthode \texttt{genFootpaths} pour générer les chemins
-	      à pied sur base des instances de \texttt{Stop}. % TODO: phrase bof
+	      Le constructeur de \texttt{Solver} et de \texttt{MultiCritSolver} appellent leur méthode \texttt{genFootpaths} pour générer les chemins
+	      à pied sur base des instances de \texttt{Stop}.
 
 \end{enumerate}
 
