--- a/res/refs.bib
+++ b/res/refs.bib
@@ -9,7 +9,8 @@ Julian Dibbelt, Thomas Pajor, Ben Strasser, and Dorothea Wagner
 https://i11www.iti.kit.edu/extra/publications/dpsw-isftr-13.pdf
 
 @misc{ConnectionScanAlgorithmShort,
-    author = {Julian Dibbelt and Thomas Pajor and Ben Strasser and Dorothea Wagner},
+    author = {Julian Dibbelt and Thomas Pajor and Ben Strasser and Dorothea
+              Wagner},
     title = {Intriguingly Simple and Fast Transit Routing},
     howpublished = {\url{
                     https://i11www.iti.kit.edu/extra/publications/dpsw-isftr-13.pdf
@@ -28,7 +29,8 @@ Julian Dibbelt, Thomas Pajor, Ben Strasser, Dorothea Wagner
 https://arxiv.org/abs/1703.05997
 
 @misc{ConnectionScanAlgorithmLong:2017,
-    author = {Julian Dibbelt and Thomas Pajor and Ben Strasser and Dorothea Wagner},
+    author = {Julian Dibbelt and Thomas Pajor and Ben Strasser and Dorothea
+              Wagner},
     title = {Connection Scan Algorithm},
     year = {2017},
     eprint = {1703.05997},
@@ -70,6 +72,14 @@ https://dl.acm.org/doi/10.5555/2790174.2790186
     year = {2021},
 }
 
+@misc{complexitetris,
+    author = {Jean Cardinal},
+    title = {Tri Fusion (Merge Sort) et Tri Rapide (QuickSort)},
+    note = {Slides du cours INFO-F203: Algorithmique 2, Université Libre de
+            Bruxelles, voir page~17},
+    year = {2021},
+}
+
 % ----------------------------
 
 https://iopscience.iop.org/article/10.1088/1742-6596/1500/1/012104/pdf
@@ -79,5 +89,24 @@ https://iopscience.iop.org/article/10.1088/1742-6596/1500/1/012104/pdf
     title = {Use of Haversine Formula in Finding Distance Between Temporary
              Shelter and Waste End Processing Sites},
     note = {voir page~3},
+    year = {2019},
+}
+
+@online{javaListSort,
+    author = {{Oracle Corporation}},
+    title = {{List.sort(Comparator)}},
+    url = {
+           https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/util/List.html#sort(java.util.Comparator)
+           },
+    note = {Visitté le: 2025-05-14. implémentation de la méthode sort de
+            l'interface List (TimSort).},
+    urldate = {2025-05-14},
+}
+
+
+@misc{timSortComplexity,
+    author = {Nicolas Auger, Vincent Jugé, Cyril Nicaud, and Carine Pivoteau},
+    title = {On the Worst-Case Complexity of TimSort},
+    howpublished = {\url{ https://arxiv.org/pdf/1805.08612 }},
     year = {2019},
 }
